<resources>
    <string name="app_name">BMI</string>
    <string name="tab1_fragment_string">Tab1</string>
    <string name="tab2_fragment_string">Tab2</string>
    <string name="bmi_calculator">BMI</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="your">your</string>
    <string name="ok">OK</string>
    <string name="radio_male">male</string>
    <string name="radio_female">female</string>
    <string name="tabradio_male">male</string>
    <string name="tabradio_female">female</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="pounds">pounds</string>
    <string name="feet">feet</string>
    <string name="inch">inch</string>
</resources>
