<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bmi_calculator"
        android:id="@+id/tabtextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/weight"
        android:id="@+id/tabtextView2"
        android:layout_marginTop="15dp"
        android:textColor="#f90c0c"
        android:layout_below="@+id/tabtextView"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tabeditText"
        android:layout_below="@+id/tabtextView2"
        android:layout_alignParentEnd="true"
        android:textColor="#fa1818"
        android:hint="@string/pounds"
        android:layout_marginTop="15dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/height"
        android:id="@+id/tabtextView3"
        android:textColor="#e10606"
        android:layout_below="@+id/tabeditText"
        android:layout_alignEnd="@+id/tabtextView2"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/tabeditText2feet"
        android:layout_below="@+id/tabtextView3"
        android:textColor="#f50c0c"
        android:hint="@string/feet"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/tabeditText2inch"
        android:textColor="#f50c0c"
        android:hint="@string/inch"
        android:layout_above="@+id/tabradiosex"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>



    <RadioGroup
        android:id="@+id/tabradiosex"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tabeditText2feet"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/tabradiomale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:checked="true"
            android:text="@string/tabradio_male" />
        <RadioButton
            android:id="@+id/tabradiofemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/tabradio_female"
            android:checked="false" />


    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/tabbutton"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/tabradiosex"
        android:layout_alignStart="@+id/tabeditText2inch" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tabeditText3"
        android:layout_below="@+id/tabbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

</RelativeLayout>