<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/bmi_calculator"
    android:id="@+id/textView"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:textSize="50sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/weight"
        android:id="@+id/textView2"
        android:layout_marginTop="15dp"
        android:textColor="#f90c0c"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:textColor="#fa1818"
        android:hint="@string/kg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/height"
        android:id="@+id/textView3"
        android:layout_marginTop="15dp"
        android:textColor="#e10606"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/textView2"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/editText"
        android:textColor="#f50c0c"
        android:hint="@string/cm"/>/>



    <RadioGroup
        android:id="@+id/radiosex"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText2"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <RadioButton
            android:id="@+id/radiomale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:checked="true"
            android:text="@string/radio_male" />
        <RadioButton
            android:id="@+id/radiofemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/radio_female"
            android:checked="false" />


    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button"
        android:layout_below="@+id/radiosex"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

</RelativeLayout>